--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,14 +1,14 @@
 .collection {
-  margin: 50px;
+  margin: auto 50px;
   padding: 20px;
 }
-.banner {
+.collection .banner {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   flex-direction: row;
 }
-.banner .line {
+.collection .banner .line {
   width: 40%;
   margin: auto;
   border-bottom: 1px solid var(--red);
@@ -18,6 +18,7 @@
   font-size: 2rem;
   font-weight: bold;
   text-transform: uppercase;
+  padding-left: 20px;
 }
 .btn {
   border: solid 1px var(--red);
@@ -41,5 +42,6 @@
 .collection-items {
     display: flex;
     justify-content: space-around;
+    align-items: flex-start;
     flex-wrap: wrap;
 }
