--- a/src/components/RecipePreviews/RecipePreview.css
+++ b/src/components/RecipePreviews/RecipePreview.css
@@ -1,7 +1,7 @@
 .collection-item {
     cursor: pointer;
     text-align: left ;
-    width: 400px;
+    width: 370px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -13,6 +13,9 @@
     height: auto;
     object-fit: cover;
 }
+.item-container {
+    margin-bottom: 30px;
+}
 .item-container h3 {
     color: var(--gold);
     margin: 0;
@@ -20,6 +23,7 @@
     padding-bottom: 5px;
 }
 .item-container h2 {
+    color: var(--dark-blue);
     text-transform: uppercase;
     margin: 0;
     padding-top: 5px;
@@ -28,10 +32,10 @@
     color: var(--red);
 }
 .item-container p {
+    color: var(--dark-gray);
     margin: 0;
     font-size: 16px;
     font-weight: 400;
-    font-style: italic;
     line-height: 1.31;
     display: -webkit-box;
     -webkit-line-clamp: 2;
