--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 
 body * {
   background-attachment: scroll;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   text-decoration: none;
 }
 body {
@@ -11,26 +11,31 @@ body {
 }
 
 :root {
-  --red: #8F555C;
+  --red: #8f555c;
   --yellow: #dea249;
   --dark-yellow: #936b30;
-  --light-yellow: #E7BD7F;
+  --light-yellow: #e7bd7f;
   --gray: #898989;
   --dark-gray: #626262;
-  --dark-blue: #2A2A2C;
+  --dark-blue: #2a2a2c;
   --gold: #e8b56a;
+  --green: #008037;
+  --primary: #f9f9f9;
+  --gray-border: #c5c5c5;
+  --gray-bg: #f3f3f3;
 }
 .root {
   font-size: 16px;
 }
 footer {
-  background-color: var(--red);
-  height: 50px;
+  width: 100%;
+  height: 60px;
+  background-color: var(--primary);
   margin-top: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #ffffff;
+  color: (--gray-border);
   gap: 5px;
 }
 footer a {
