--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,5 +1,5 @@
 .collection {
-  margin: auto 50px;
+  margin: auto 5%;
   padding: 20px;
 }
 .collection .banner {
@@ -15,9 +15,9 @@
 }
 .collection h2 span:first-child {
   color: var(--dark-blue);
-  font-size: 2rem;
-  font-weight: bold;
-  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-transform: capitalize;
 }
 @media only screen and (max-width: 768px) {
   .collection .banner {
@@ -32,7 +32,7 @@
 }
 
 .view-more {
-  border: solid 1px var(--red);
+  border: solid 1px var(--green);
   background-color: #ffff;
   padding: 5px 10px;
   color: var(--red);
